Fixed a graphical issue when adding multiple blocks and wrapping for added blocks and made it so that the page stays at the scroll spot on update.

--- a/zazz/includes/style.css
+++ b/zazz/includes/style.css
@@ -393,10 +393,10 @@ body {
 
 .-zazz-code-block {
 	width: 100%;
-	max-height: 100%;
 	background-color: transparent;
 	resize: horizontal;
-	overflow: hidden;
+	overflow-y: hidden;
+	overflow-x: auto;
 	color: white;
 	padding: 8px 8px 8px 18px;
 	border-style: solid;
